globex/base/dep-coolstore.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: web-nodejs
  labels:
    app: web-nodejs
    app.kubernetes.io/component: web-nodejs
    app.kubernetes.io/instance: web-nodejs
    app.kubernetes.io/name: web-nodejs
    app.kubernetes.io/part-of: web-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web-nodejs
  template:
    metadata:
      labels:
        app: web-nodejs
        deployment: web-nodejs
    spec:
      containers:
        - name: web-nodejs
          image: 'image-registry.openshift-image-registry.svc:5000/node2/web-nodejs-git:latest'
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
